--- a/message_sent.html
+++ b/message_sent.html
@@ -7,18 +7,17 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="body-thanks">
+<body class="">
     <div class="page-content-wrapper">
         <section id="main" class="main-section">
             <div class="container-nav-bar">
-                <a href="http://127.0.0.1:5500/portfolioProject/index.html" class="brand"><img src="img/ds-brand.png"
-                        loading="lazy" width="125" /></a>
+                <a href="http://127.0.0.1:5500/index.html" class="brand"><img src="img/ds-brand.png" loading="lazy"
+                        width="125" /></a>
                 <nav role="navigation" class="nav-menu">
-                    <a href="http://127.0.0.1:5500/portfolioProject/index.html#education-section"
-                        class="nav-link">Education and skills</a>
-                    <a href="http://127.0.0.1:5500/portfolioProject/index.html#projects-section"
-                        class="nav-link">projects</a>
-                    <a href="http://127.0.0.1:5500/portfolioProject/index.html#contact" class="nav-link">Contact</a>
+                    <a href="http://127.0.0.1:5500/index.html#main" class="nav-link">Education and
+                        skills</a>
+                    <a href="http://127.0.0.1:5500/index.html#main" class="nav-link">projects</a>
+                    <a href="http://127.0.0.1:5500/index.html#main" class="nav-link">Contact</a>
                 </nav>
             </div>
         </section>
@@ -28,8 +27,10 @@
                 <h2>Message received!</h2>
                 <div class="_3-col-grid">
                     <h3 class="item">Thank you for your contact!</h3>
-                    <img class="item" src="img/doug-tkyou.png" id="img-thanks">
-                    <h3 class="item">We will be in touch soon. You can go back to the main page now...</h3>
+                    <img class="item" src="img/msg-received.gif" id="img-thanks">
+                    <h3 class="item">I will be in touch soon. You can <a class="link-color"
+                            href="http://127.0.0.1:5500/index.html">go
+                            back to the main page now. </a></h3>
                 </div>
                 <div>
 
@@ -47,12 +48,14 @@
             </div>
         </section>
     </div>
+    <footer id="footer">
+        <p class="footer-text">Website designed by Douglas Santos</p>
+        <p class="footer-text">Dublin - Ireland | 2023</p>
+    </footer>
     <div class="bg-grads">
         <div class="lighting-top"></div>
         <div class="lighting-right"></div>
         <div class="lighting-left"></div>
-        <div class="lighting-middle"></div>
-
     </div>
 </body>
 
