--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@
             <div class="container">
                 <div class="_2-col-grid grid">
                     <div class="content-wrap">
-                        <h1 class="heading">Hi, I'm Doug!</h1>
-                        <p class="short-intro">I am a Computer Science student, passionate about java development,
-                            databases, and new technologies.</p>
+                        <div class="image-wrap">
+                            <div class="image-main">
+                                <img src="img/doug-main-00.png" loading="lazy" />
+                            </div>
+                        </div>
+                        <div class="heading-wrap">
+                            <h1 class="heading typewriter" id="typed-text"></h1>
+                            <p class="short-intro">I am a Computer Science student, passionate about programming,
+                                databases, and new technologies. I am looking for employment opportunities in the
+                                Technology sector, especially in the field of Software Development, a place where I can
+                                learn new skills and build on my existing experience and recent training.</p>
+                        </div>
                     </div>
-                    <div class="image-wrap">
-                        <img src="img/doug-main-00.png" loading="lazy" class="image-main" />
-                        <img src="img/doug-hover-00.png" loading="lazy" class="image-back" />
-                    </div>
+
+
                 </div>
                 <div class="content-wrap-about">
                     <h1 class="heading-about-me">About me</h1>
@@ -42,7 +49,7 @@
                         tricks.
                         <br /><br />
                         Unfortunately, life took me on a different journey, where I worked in
-                        many different indutries over the years, from different kinds of office jobs, to
+                        many different indutries over the years, from different kinds of office jobs to
                         administrative assistant in a bank, language teacher, and finance. However, I rediscovered
                         my passion for coding when I came to Ireland and started my second degree in
                         2020.
@@ -65,58 +72,62 @@
                         <img src="img/CCT-logo.jpg" loading="lazy" class="bright-img" alt="">
                     </a>
                     <p class="paragraph">
-                        I have started my Bachelor of Science (Honours) in Computing and IT at CCT College in Dublin in
-                        2020 and currently I am in the final stages of my third year of studies. So far, my practical
-                        experience
-                        has been focused on college projects. <br>I have actively participated in group works,
+                        I started my Bachelor of Science (Honours) in Computing and IT at CCT College in Dublin in
+                        2020 and currently I am in the final stages of my studies. So far, my practical
+                        experience has been focused on college projects. <br><br>I have actively participated in group
+                        works,
                         where I have had the opportunity to apply and utilize all of the skills I have learned, as well
-                        as be part of
-                        a team and work collaboratively, where I have gained valuable insights into project planning,
-                        coordination,
-                        and the effective utilization of each team member's expertise.
-                        <br><br> Here are some of my skills and areas where I succeed the most:
+                        as be part of a team and work collaboratively, where I have gained valuable insights into
+                        project planning,
+                        coordination,and the effective utilization of each team member's expertise.
+                        <br><br> Here are some of the skills and areas where I succeed the most:
                     </p>
                     <div class="icon-group">
                         <div class="icon-container">
                             <img src="icons/icon-java.png" class="icons">
+                            <img src="icons/icon-python.png" class="icons">
+                            <img src="icons/icon-springboot.png" class="icons">
                             <img src="icons/icon-js.png" class="icons">
-                            <img src="icons/icon-html.png" class="icons">
-                            <img src="icons/icon-css.png" class="icons">
-                            <img src="icons/icon-linux.png" alt="">
                         </div>
                         <br><br>
                         <div class="icon-container">
+                            <img src="icons/icon-html.png" class="icons">
+                            <img src="icons/icon-css.png" class="icons">
+                            <img src="icons/icon-linux.png" class="icons">
                             <img src="icons/icon-git.png" class="icons">
+                        </div>
+                        <br><br>
+                        <div class="icon-container">
                             <img src="icons/icon-mysql.png" class="icons">
-                            <img src="icons/icon-db.png" class="icons">
+                            <img src="icons/icon-hadoop.png" class="icons">
+                            <img src="icons/icon-aws.png" class="icons">
                             <img src="icons/icon-cloud.png" class="icons">
-                            <img src="icons/icon-solidity.png" class="icons">
+
                         </div>
                     </div>
                     <ul class="list-skills">
-                        <li>Java</li>
-                        <li>Javascript</li>
-                        <li>HTML and CSS</li>
-                        <li>Linux</li>
-                        <li>Git</li>
-                        <li>SQL (MySQL)</li>
-                        <li>NoSQL Databases (MongoDB)</li>
-                        <li>Google Cloud Services</li>
-                        <li>Solidity</li>
+                        <li>Programming: Java - Python - Spring Boot</li>
+                        <li>Web Development: Javascript - HTML - CSS</li>
+                        <li>Databases: SQL (MySQL) - NoSQL (MongoDB) - Hadoop</li>
+                        <li>Cloud Technologies: Amazon Web Services - Google Cloud Services</l>
+                        <li>Operating Sysems: Windows and Linux</li>
+                        <li>Algorithms - Git - Networking </li>
                     </ul>
                 </article>
             </div>
             <div class="side-menu">
-                <a href="https://github.com/dacsantos" class="link-social" target="_blank">
+                <a href="https://github.com/dacsantos" class="link-social" target="_blank" title="Visit my Github page">
                     <img src="icons/icon-github.png" loading="lazy" width="50" class="image-socials">
                 </a>
-                <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank">
+                <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"
+                    title="Access my Linkedin profile">
                     <img src="icons/icon-linkedin.png" loading="lazy" width="50" class="image-socials">
                 </a>
-                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank">
+                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank" title="Send me an email!">
                     <img src="icons/icon-email.png" loading="lazy" width="50" class="image-socials">
                 </a>
-                <a href="docs/Douglas_Santos_CV.pdf" class="link-social" target="_blank">
+                <a href="docs/Douglas_Santos_CV.pdf" class="link-social" target="_blank"
+                    title="Feel free to download my CV">
                     <img src="icons/icon-cv.png" loading="lazy" width="50" class="image-socials">
                 </a>
             </div>
@@ -141,8 +152,8 @@
                         with a login page implementing a user password validator,
                         a menu page to select the order and display the prices breakdown, separated by vegetarian and
                         non-vegetarian
-                        options, a customer generator using <a href="https://randomuser.me/"
-                            class="external-link">Ramdom User API</a>, and a kitchen page
+                        options, a customer generator using <a href="https://randomuser.me/" class="external-link"
+                            target="_blank">Ramdom User API</a>, and a kitchen page
                         showing the food served at the restaurant. A very simple website that I was able to practice and
                         showcase a
                         few skills. <br>
@@ -207,24 +218,32 @@
 
                             <a href="https://github.com/dacsantos/Application_of_Concurrency_to_Common_Tasks.git"
                                 class="link-project" target="_blank">
-                                <img src="icons/icon-github.png" loading="lazy" class="logo-project">
+                                <img src="icons/icon-github.png" loading="lazy" class="logo-project ">
                                 Check this code out!
                             </a>
                         </p>
                     </div>
                 </article>
+                <div class="more-projects ">
+                    <h1 class="heading-about-me">...and for more coding projects:</h1>
+                    <p class="about-text more-projects">
+                        <a href="https://github.com/cctdoug" class="link-color link-project" target="_blank"> Visit my
+                            github page
+                            <img src="icons/icon-github.png" loading="lazy" class="logo-project "></a>
+                    </p>
+                </div>
             </div>
         </section>
         <!-- Contact (4) -->
         <section id="contact">
             <div class="container">
-                <div class="sub-header">Contact</div>
+                <div class="sub-header-contact">Contact</div>
                 <h2>Go ahead, let's connect!</h2>
                 <div class="article">
                     <div>
-                        <h3>Send me a message...</h3>
-                        <form  id="contactForm" action="https://formsubmit.co/2fa477eded23afe88ae0593a791d1898" method="POST">
-                            <input type="hidden" name="_next" value="http://localhost:5500/portfolioProject/message_sent.html">
+                        <h3>Send me a message</h3>
+                        <form id="contactForm" action="https://formsubmit.co/dacsantos@live.com" method="POST">
+                            <input type="hidden" name="_next" value="http://localhost:5500/message_sent.html">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_template" value="table">
                             <input type="text" class="form-input" name="name" placeholder="Your name here" required>
@@ -236,28 +255,33 @@
                     </div>
                     <div class="img-contact-text">
                         <img src="img/doug-why.png" class="img-contact">
-                        <p class="about-text">...about interviews, project enquiries, or just to say 'Hi!' and how much
-                            you
-                            enjoyed this page. I will get back to you as soon as possible.
+                        <p class="about-text">“Well, you have made it this far, so you might as well leave a message
+                            about interviews, project inquiries, or just to say ‘Hi!’ (especially if you are a lecturer
+                            evaluating my work). I’ll get back to you as soon as possible.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
     </div>
+
+    <footer id="footer">
+        <p class="footer-text">Website designed by Douglas Santos</p>
+        <p class="footer-text">Dublin - Ireland | 2023</p>
+        <div class="bottom-texture">
+            <img src="/img/bottom-left-texture.png">
+        </div>
+    </footer>
     <div class="bg-grads">
         <div class="lighting-top"></div>
+        <div class="right-top-texture"> <img src="img/right-top-texture.png"> </div>
         <div class="lighting-right"></div>
         <div class="lighting-left"></div>
         <div class="lighting-middle"></div>
+        <div class="lighting-more-projects "></div>
         <div class="lighting-bottom1"></div>
         <div class="lighting-bottom2"></div>
     </div>
-    <footer id="footer">
-        <div class="footer-container"></div>
-        <p class="footer-text">Website designed by Douglas Santos</p>
-        <p class="footer-text">Dublin - Ireland | 2023</p>
-    </footer>
     <script src="js/script.js" type="text/javascript"></script>
 </body>
 
