Link reference correction

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div>
                         <h3>Send me a message</h3>
                         <form id="contactForm" action="https://formsubmit.co/dacsantos@live.com" method="POST">
-                            <input type="hidden" name="_next" value="http://localhost:5500/message_sent.html">
+                            <input type="hidden" name="_next" value="https://cctdoug.github.io/portfolio/message_sent.html">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_template" value="table">
                             <input type="text" class="form-input" name="name" placeholder="Your name here" required>
