--- a/message_sent.html
+++ b/message_sent.html
@@ -11,13 +11,13 @@
     <div class="page-content-wrapper">
         <section id="main" class="main-section">
             <div class="container-nav-bar">
-                <a href="http://127.0.0.1:5500/index.html" class="brand"><img src="img/ds-brand.png" loading="lazy"
+                <a href="https://cctdoug.github.io/portfolio" class="brand"><img src="img/ds-brand.png" loading="lazy"
                         width="125" /></a>
                 <nav role="navigation" class="nav-menu">
-                    <a href="http://127.0.0.1:5500/index.html#main" class="nav-link">Education and
+                    <a href="https://cctdoug.github.io/portfolio#main" class="nav-link">Education and
                         skills</a>
-                    <a href="http://127.0.0.1:5500/index.html#main" class="nav-link">projects</a>
-                    <a href="http://127.0.0.1:5500/index.html#main" class="nav-link">Contact</a>
+                    <a href="https://cctdoug.github.io/portfolio/#main" class="nav-link">projects</a>
+                    <a href="https://cctdoug.github.io/portfolio/#main" class="nav-link">Contact</a>
                 </nav>
             </div>
         </section>
@@ -29,7 +29,7 @@
                     <h3 class="item">Thank you for your contact!</h3>
                     <img class="item" src="img/msg-received.gif" id="img-thanks">
                     <h3 class="item">I will be in touch soon. You can <a class="link-color"
-                            href="http://127.0.0.1:5500/index.html">go
+                            href="https://cctdoug.github.io/portfolio">go
                             back to the main page now. </a></h3>
                 </div>
                 <div>
