--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="My Portfolio">
     <meta name="keywords" content="My Portfolio">
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 
 <body class="body">
@@ -251,6 +252,9 @@
                             <textarea type="text" name="message" id="msg-box" cols="50" rows="4"
                                 placeholder="Enter your message here" required></textarea>
                             <button class="button" type="submit">Send Message</button>
+                            <div style="display: none;" id="please_wait" class="">
+                                <h2>Please Wait...Your message is being sent!</h2>
+                            </div>
                         </form>
                     </div>
                     <div class="img-contact-text">
@@ -269,7 +273,7 @@
         <p class="footer-text">Website designed by Douglas Santos</p>
         <p class="footer-text">Dublin - Ireland | 2023</p>
         <div class="bottom-texture">
-            <img src="/img/bottom-left-texture.png">
+            <img src="img/bottom-texture.png">
         </div>
     </footer>
     <div class="bg-grads">
