--- a/index.html
+++ b/index.html
@@ -128,8 +128,12 @@
                     <img src="icons/icon-email.png" loading="lazy" width="50" class="image-socials">
                 </a>
                 <a href="docs/Douglas_Santos_CV.pdf" class="link-social" target="_blank"
-                    title="Feel free to download my CV">
-                    <img src="icons/icon-cv.png" loading="lazy" width="50" class="image-socials">
+                    title="Download a PDF version my CV">
+                    <img src="icons/icon-pdf.png" loading="lazy" width="50" class="image-socials">
+                </a>
+                <a href="docs/Douglas_Santos_CV.docx" class="link-social" target="_blank"
+                    title="Download a WORD version my CV">
+                    <img src="icons/icon-word.png" loading="lazy" width="50" class="image-socials">
                 </a>
             </div>
         </section>
@@ -244,7 +248,8 @@
                     <div>
                         <h3>Send me a message</h3>
                         <form id="contactForm" action="https://formsubmit.co/dacsantos@live.com" method="POST">
-                            <input type="hidden" name="_next" value="https://cctdoug.github.io/portfolio/message_sent.html">
+                            <input type="hidden" name="_next"
+                                value="https://cctdoug.github.io/portfolio/message_sent.html">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_template" value="table">
                             <input type="text" class="form-input" name="name" placeholder="Your name here" required>
