--- a/message_sent.html
+++ b/message_sent.html
@@ -37,14 +37,24 @@
                 </div>
             </div>
             <div class="side-menu">
-                <a href="https://github.com/dacsantos" class="link-social" target="_blank"><img
-                        src="icons/icon-github.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
-                <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"><img
-                        src="icons/icon-linkedin.png" loading="lazy" width="50" alt="" class="image-socials" /></a>
-                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank"><img src="icons/icon-email.png"
-                        loading="lazy" width="50" alt="" class="image-socials" /></a>
-                <a href="docs/Douglas_Santos_CV.pdf" class="link-social" target="_blank"><img src="icons/icon-cv.png"
-                        loading="lazy" width="50" alt="" class="image-socials"></a>
+                <a href="https://github.com/dacsantos" class="link-social" target="_blank" title="Visit my Github page">
+                    <img src="icons/icon-github.png" loading="lazy" width="50" class="image-socials">
+                </a>
+                <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"
+                    title="Access my Linkedin profile">
+                    <img src="icons/icon-linkedin.png" loading="lazy" width="50" class="image-socials">
+                </a>
+                <a href="mailto:dacsantos@live.com" class="link-social" target="_blank" title="Send me an email!">
+                    <img src="icons/icon-email.png" loading="lazy" width="50" class="image-socials">
+                </a>
+                <a href="docs/Douglas_Santos_CV.pdf" class="link-social" target="_blank"
+                    title="Download a PDF version my CV">
+                    <img src="icons/icon-pdf.png" loading="lazy" width="50" class="image-socials">
+                </a>
+                <a href="docs/Douglas_Santos_CV.docx" class="link-social" target="_blank"
+                    title="Download a WORD version my CV">
+                    <img src="icons/icon-word.png" loading="lazy" width="50" class="image-socials">
+                </a>
             </div>
         </section>
     </div>
