--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </article>
             </div>
             <div class="side-menu">
-                <a href="https://github.com/dacsantos" class="link-social" target="_blank" title="Visit my Github page">
+                <a href="https://github.com/cctdoug" class="link-social" target="_blank" title="Visit my Github page">
                     <img src="icons/icon-github.png" loading="lazy" width="50" class="image-socials">
                 </a>
                 <a href="https://www.linkedin.com/in/dacsantos/" class="link-social" target="_blank"
@@ -147,7 +147,7 @@
                         <p class="title-project"> Restaurant Brazil
                         <h2 style="text-align: center;">(click the image to access the website) </h2>
                         </p>
-                        <a href="https://dacsantos.github.io/Brazil-Restaurant/" class="title-project" target="_blank">
+                        <a href="https://cctdoug.github.io/Brazil-Restaurant/" class="title-project" target="_blank">
                             <img src="img/restaurant-00.jpg" class="img-project">
                         </a>
                     </div>
@@ -162,7 +162,7 @@
                         showing the food served at the restaurant. A very simple website that I was able to practice and
                         showcase a
                         few skills. <br>
-                        <a href="https://github.com/dacsantos/Brazil-Restaurant.git" class="link-project"
+                        <a href="https://github.com/cctdoug/Brazil-Restaurant.git" class="link-project"
                             target="_blank">
                             <img src="icons/icon-github.png" loading="lazy" width="50" class="logo-project" />
                             Check this code out!
@@ -198,7 +198,7 @@
                             with two
                             options to choose from: multiplications of 2x2 or 3x3 matrices, provided by the users.
                             <br>
-                            <a href="https://github.com/dacsantos/equationsCalculator.git" class="link-project"
+                            <a href="https://github.com/cctdoug/equationsCalculator.git" class="link-project"
                                 target="_blank">
                                 <img src="icons/icon-github.png" loading="lazy" width="50" class="logo-project" />
                                 Check this code out!
@@ -207,7 +207,7 @@
                     </div>
                     <div class="project-container">
                         <p class="title-project"> Concurrency Tasks</p>
-                        <a href="https://github.com/dacsantos/Application_of_Concurrency_to_Common_Tasks.git"
+                        <a href="https://github.com/cctdoug/Application_of_Concurrency_to_Common_Tasks.git"
                             class="title-project" target="_blank">
                             <img src="img/concurrency-data-manipulation.jpg" class="img-project">
                         </a>
@@ -221,7 +221,7 @@
                             merge-sort
                             algorithm to sort the data set. <br>
 
-                            <a href="https://github.com/dacsantos/Application_of_Concurrency_to_Common_Tasks.git"
+                            <a href="https://github.com/cctdoug/Application_of_Concurrency_to_Common_Tasks.git"
                                 class="link-project" target="_blank">
                                 <img src="icons/icon-github.png" loading="lazy" class="logo-project ">
                                 Check this code out!
