--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
                     <div class="img-contact-text">
                         <img src="img/doug-why.png" class="img-contact">
                         <p class="about-text">Well, you have made it this far, so you might as well leave a message
-                            about interviews, project inquiries, or just to say ‘Hi!’ (especially if you are a lecturer
-                            evaluating my work). I’ll get back to you as soon as possible.
+                            about interviews, project inquiries, or just to say ‘Hi!’, I’ll get back to you as soon as possible.
                         </p>
                     </div>
                 </div>
